use non preview feature to format string.